@@ -2,7 +2,7 @@ Package: rugarch
 Type: Package
 Title: Univariate GARCH models
 Version: 1.3-5
-Date: 2015-02-28
+Date: 2015-03-04
 Author: Alexios Ghalanos <alexios@4dscape.com>
 Maintainer: Alexios Ghalanos <alexios@4dscape.com>
 Depends: R (>= 3.0.2), methods, parallel
