@@ -41,7 +41,7 @@ export("arfimafilter", "arfimapath", "arfimaroll")
 export("multispec", "multifit", "multifilter", "multiforecast")
 export("ugarchboot", "ugarchdistribution")
 export("arfimadistribution")
-export("autoarfima")
+export("autoarfima","arfimacv")
 export("ddist", "pdist", "qdist", "rdist", "fitdist", "ghyptransform", "dskewness", "dkurtosis", "distplot", "skdomain")
 export("BerkowitzTest", "DACTest", "VaRTest", "ESTest", "VaRDurTest","GMMTest","HLTest","VaRplot", "VaRloss")
 export("move", "generatefwd", "ftseq", "mcsTest")
