@@ -1,4 +1,4 @@
-2014-12-29  Alexios Ghalanos <alexios@4dscape.com>
+2015-03-04  Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.3-5.
 	* Exported and documented the mcsTest.
 	* Added confint S4 method (same as stats S3 confint) at user's 
@@ -6,6 +6,8 @@
     * Fix to iGARCH simulation (thanks to Andy Tang).
     * Added the reduce method to ARFIMAfit class
     (was previously only available for uGARCHfit class).
+    * Added the arfimacv function for ARFIMAX time series cross-validation.
+    * Fixes to some examples (were based on deprecated extractor methods).
 
 2014-11-08  Alexios Ghalanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.3-4.
